# AI-ContentManager

./: .env.example  .gitignore  CLAUDE.md  VIDEO_PIPELINE_IMPLEMENTATION_PLAN.md  pyproject.toml
remotion-video/: .gitignore  package.json  render.ts  tsconfig.json
remotion-video/public/lottie/: celebrating-black.json  convert_to_black_outline.py  hello-wave-black.json  stickman-talking-black.json  stickman-walking-black.json  thinking-black.json
remotion-video/src/: Root.tsx
remotion-video/src/components/: Character.tsx  DialogueBox.tsx  EducationalVideo.tsx  LottieCharacter.tsx
src/contentmanager/: __init__.py  config.py  main.py
src/contentmanager/core/content/: __init__.py
src/contentmanager/core/content/video_pipeline/: __init__.py  animated_renderer.py  animation_prompts.py  asset_manager.py  ffmpeg_renderer.py  lipsync_renderer.py  models.py  pipeline.py  prompts.py  remotion_renderer.py  script_generator.py  voiceover_service.py
src/contentmanager/dashboard/routers/: video_projects.py
src/contentmanager/dashboard/static/css/: dashboard.css
src/contentmanager/dashboard/static/js/: dashboard.js
src/contentmanager/dashboard/templates/: index.html
src/contentmanager/database/: models.py
src/contentmanager/database/repositories/: video_project.py
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_asset_manager.py  test_ffmpeg_renderer.py  test_models.py  test_repositories.py
