[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contentmanager"
version = "0.1.0"
description = "AI Content Manager - Educational Video Bot"
readme = "VIDEO_PIPELINE_IMPLEMENTATION_PLAN.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Content Manager Team" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "anthropic>=0.18.0",
    "elevenlabs>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
contentmanager = "contentmanager.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contentmanager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/contentmanager --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["contentmanager"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "elevenlabs.*",
    "ffmpeg.*",
]
ignore_missing_imports = true
